# Boost.Asio_Server_Project

./: .gitignore  README.md
GomokuServer/: .gitignore  CMakeLists.txt
GomokuServer/src/: Client.cpp  GameManager.h  GameRoom.cpp  GameRoom.h  LobbyManager.h  Packet.h  Session.cpp  Session.h  main.cpp
Gomoku_Client/Assets/Prefabs/: BlackStonePrefab.prefab  CellPrefab.prefab  WhiteStonePrefab.prefab
Gomoku_Client/Assets/Scenes/: SampleScene.unity
Gomoku_Client/Assets/Scripts/: GameSceneManager.cs  NetworkManager.cs  Packet.cs  PacketConvert.cs  UnityMainThreadDispatcher.cs
Gomoku_Client/ProjectSettings/: ProjectSettings.asset
